--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.2.1",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
     "react": "^18",
